<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_publisher_subscriber</name>
  <version>0.0.0</version>
  <description>Custom py_publisher_subscriber</description>
  <maintainer email="silasudofia469@gmail.com">silas469</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>more_interfaces</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
